log/build_2025-05-21_20-36-17/c8nav/stdout_stderr.log
running egg_info
writing ../../build/c8nav/c8nav.egg-info/PKG-INFO
writing dependency_links to ../../build/c8nav/c8nav.egg-info/dependency_links.txt
writing entry points to ../../build/c8nav/c8nav.egg-info/entry_points.txt
writing requirements to ../../build/c8nav/c8nav.egg-info/requires.txt
writing top-level names to ../../build/c8nav/c8nav.egg-info/top_level.txt
reading manifest file '../../build/c8nav/c8nav.egg-info/SOURCES.txt'
writing manifest file '../../build/c8nav/c8nav.egg-info/SOURCES.txt'
running build
running build_py
copying c8nav/send_goal_qr_code.py -> /home/gixstudent/Desktop/Final_lab/robotics_navigation/build/c8nav/build/lib/c8nav
running install
running install_lib
copying /home/gixstudent/Desktop/Final_lab/robotics_navigation/build/c8nav/build/lib/c8nav/send_goal_qr_code.py -> /home/gixstudent/Desktop/Final_lab/robotics_navigation/install/c8nav/lib/python3.10/site-packages/c8nav
byte-compiling /home/gixstudent/Desktop/Final_lab/robotics_navigation/install/c8nav/lib/python3.10/site-packages/c8nav/send_goal_qr_code.py to send_goal_qr_code.cpython-310.pyc
  File "/home/gixstudent/Desktop/Final_lab/robotics_navigation/install/c8nav/lib/python3.10/site-packages/c8nav/send_goal_qr_code.py", line 130
    tf = self.t
               ^
SyntaxError: expected 'except' or 'finally' block

running install_data
running install_egg_info
removing '/home/gixstudent/Desktop/Final_lab/robotics_navigation/install/c8nav/lib/python3.10/site-packages/c8nav-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/c8nav/c8nav.egg-info to /home/gixstudent/Desktop/Final_lab/robotics_navigation/install/c8nav/lib/python3.10/site-packages/c8nav-0.0.0-py3.10.egg-info
running install_scripts
Installing get_goal script to /home/gixstudent/Desktop/Final_lab/robotics_navigation/install/c8nav/lib/c8nav
Installing save_current_pose script to /home/gixstudent/Desktop/Final_lab/robotics_navigation/install/c8nav/lib/c8nav
Installing send_goal script to /home/gixstudent/Desktop/Final_lab/robotics_navigation/install/c8nav/lib/c8nav
Installing send_goal_qr_code script to /home/gixstudent/Desktop/Final_lab/robotics_navigation/install/c8nav/lib/c8nav
writing list of installed files to '/home/gixstudent/Desktop/Final_lab/robotics_navigation/build/c8nav/install.log'
